# app/api/internal/schema/user.go
@@ -13,17 +13,12 @@ type UserCreateSchema struct {
 type UserUpdateSchema struct {
 	Username *string `json:"username,omitempty"`
 	Email    *string `json:"email,omitempty"`
-	Name     *string `json:"name,omitempty"`
-	Bio      *string `json:"bio,omitempty"`
 }
 
 type UserResponseSchema struct {
-	ID              string    `json:"id"`
-	Username        string    `json:"username"`
-	Email           string    `json:"email"`
-	Name            string    `json:"name"`
-	Bio             string    `json:"bio"`
-	ProfileImageURL string    `json:"profileImageURL"`
-	CreatedAt       time.Time `json:"createdAt"`
-	UpdatedAt       time.Time `json:"updatedAt"`
+	ID        string    `json:"id"`
+	Username  string    `json:"username"`
+	Email     string    `json:"email"`
+	CreatedAt time.Time `json:"createdAt"`
+	UpdatedAt time.Time `json:"updatedAt"`
 }
